--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do project</title>
     <link href="./css/styles.css" type="text/css" rel="stylesheet">
 </head>
@@ -23,6 +26,6 @@
             
         </ol>
     </div>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="./js/app.js"></script>
 </body>
 </html>
